[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfmt = "0.10.0"
colored = "2.0.0"
pathfinding = "4.0.0"
rayon = "1.6.1"

[lib]
name = "libadvent2022"

[[bin]]
name="advent2022"

